# nix_demo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bootstrap
scripts/: README.md  nix_demo  run.lua
src/: Array2.h  CMakeLists.txt  CollectorSphere.cpp  CollectorSphere.h  CollimatedBeamPhotometer.cpp  CollimatedBeamPhotometer.h  DiffuseReflector.cpp  DiffuseReflector.h  EqualSolidAnglesCollectorSphere.cpp  EqualSolidAnglesCollectorSphere.h  ICollectorSphere.h  IMedium.h  IParticle.h  IParticleGenerator.h  ISpecimen.h  Interval.cpp  Interval.h  LuaCollimatedBeamPhotometer.cpp  LuaCollimatedBeamPhotometer.h  LuaDiffuseReflector.cpp  LuaDiffuseReflector.h  LuaEqualSolidAnglesCollectorSphere.cpp  LuaEqualSolidAnglesCollectorSphere.h  LuaGlobal.cpp  LuaGlobal.h  LuaPhotometerJob.cpp  LuaPhotometerJob.h  LuaPiecewiseLinearSpectrum.cpp  LuaPiecewiseLinearSpectrum.h  LuaRandomSpheroidParticleGenerator.cpp  LuaRandomSpheroidParticleGenerator.h  LuaRunner.cpp  LuaRunner.h  LuaSpectrophotometerCollectorSphere.cpp  LuaSpectrophotometerCollectorSphere.h  LuaTest1Material.cpp  LuaTest1Material.h  LuaVacuumMedium.cpp  LuaVacuumMedium.h  Medium.cpp  (+26 more)
